# Retriever-QA

./: .env-example  .gitignore  main.py  pyproject.toml
src/: loader.py  qachain.py  retriever.py  vectorstore.py
